--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ data/buck_dataset.json
 checkpoints/*.pt
 checkpoints/*.png
 
+# But keep training summary JSONs
+!checkpoints/intensive_training_summary.json
+!checkpoints/training_progress.json
+
 # Temporary files
 *.tmp
 *.temp
